fixed minor bugs on smaller devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -75,3 +75,40 @@
     .tgug-drop-contact-image-shadow {
         filter: drop-shadow(0px 0px 300px rgb(94, 94, 247));
     }
+    
+    .tgug-overlay-container {
+        position: relative;
+    }
+    
+    .tgug-overlay-text {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    
+    .project-image {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+    }
+    
+    .tgug-overlay-container:hover .project-image {
+        opacity: 0.2;
+    }
+    
+    .tgug-overlay-container:hover .tgug-overlay-text {
+        opacity: 1;
+        background-color: rgb(13, 3, 71);
+        padding-left: 5px;
+        padding-right: 5px;
+        border: 1px solid rgb(13, 3, 71);
+        border-radius: 5px;
+    }
